<resources>
    <string name="app_name">BLEScanner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mac">MAC - %1$s</string>
    <string name="rssi">RSSI: %1$d</string>
    <string name="instance">Instance: %1$s</string>
    <string name="namespace">Namespace: %1$s</string>
    <string name="uuid">UUID: %1$s</string>
    <string name="major_minor">Major: %1$s Minor: %2$s</string>
    <string-array name="BLE_Scanner_Type">
        <item>All</item>
        <item>iBeacon</item>
        <item>Wifi</item>
    </string-array>

    <string name="home_bt_beacon">測定者設定</string>
    <string name="home_bt_wifi">WiFi Setting</string>
    <string name="home_bt_location">Training Data Setting</string>
    <string name="home_bt_data">テストデータ取得</string>

    <string name="beacon_device_name">設備</string>
    <string name="beacon_user_name">測定者</string>
    <string name="beacon_other_name">備考</string>
    <string name="beacon_device_user">測定者：%1s %2sさん</string>

    <string name="area_title">area title</string>
    <string name="area_detail_title">area detail title</string>

    <string name="data_collect_title">テストデータを取得しますか？</string>

    <string name="button_save">Save</string>
    <string name="button_delete">Delete</string>
    <string name="button_done">Done</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_finish">Finish</string>


    <string name="course_name">course_name</string>
    <string name="course_rating">course_rating</string>

</resources>