<?xml version="1.0" encoding="utf-8"?>
<com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:orientation="vertical"
    app:dividerDrawable="@drawable/divider"
    app:flexDirection="column"
    app:justifyContent="center"
    app:showDivider="middle"
    tools:context=".ui.main.HomeActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/home_bt_beacon"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/home_bt_beacon"
        app:cornerRadius="20dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/home_beacon"
        android:textSize="20dp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/home_bt_data"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/home_bt_data"
        app:cornerRadius="20dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/home_data"
        android:textSize="20dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/home_bt_location"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/home_bt_location"
        app:cornerRadius="20dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/home_area"
        android:textSize="20dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/home_bt_wifi"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/home_bt_wifi"
        app:cornerRadius="20dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/home_wifi"
        android:textSize="20dp" />
</com.google.android.flexbox.FlexboxLayout>