<?xml version="1.0" encoding="utf-8"?>
<com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:paddingTop="40dp"
    android:orientation="vertical"
    app:dividerDrawable="@drawable/divider"
    app:flexDirection="column"
    app:justifyContent="flex_start"
    app:showDivider="middle"
    tools:context=".ui.beacon.BeaconActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/beacon_device_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/beacon_device_name"
            android:minHeight="48dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/beacon_user_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/beacon_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/beacon_other_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/beacon_other_name"
            android:minHeight="48dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/beacon_bt_done"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/button_save"
        android:textSize="18sp"
        app:strokeColor="@color/black"
        app:cornerRadius="10dp"
        />

<!--    <Button-->
<!--        android:id="@+id/appcompat_button2"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="60dp"-->
<!--        android:text="string"-->
<!--        app:strokeColor="@color/black"-->
<!--        app:strokeWidth="3dp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        />-->


<!--    <androidx.appcompat.widget.AppCompatButton-->
<!--        android:id="@+id/appcompat_button"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="string"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        />-->
</com.google.android.flexbox.FlexboxLayout>